--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Мой первый сайт</title>
+<title>Мой сайт_v_2.0</title>
 </head>
 <body>
-<h1>Привет, мир!</h1>
-<p>Это моя первая веб-страница на HTML.</p>
+<h1>Более детальный сайт</h1>
+<p>Это моя вторая веб-страница на HTML.</p>
 </body>
 </html>
